...
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_courses">Courses</string>
    <string name="todo">TODO</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_preferences_header">General</string>
...
